nginx-ingress/nginx-ing-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-1
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: gke-ingress-1
spec:
  rules:
    - host: '*.<<DOMAIN>>'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-ingress-nginx-controller
                port:
                  number: 443
