nginx-ingress/nginx-ing-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-2
  annotations:
    networking.gke.io/managed-certificates: gcp-managed-cert-1
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: ingress-ip-2
spec:
  rules:
    - host: '*.<<DOMAIN>>'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-ingress-nginx-controller
                port:
                  number: 443
